--- a/Sticky Navbar on Scroll.html
+++ b/Sticky Navbar on Scroll.html
@@ -1,5 +1,14 @@
 <!DOCTYPE html>
 
+<!-- 
+
+Online Video Ustaad
+Sticky Navbar on scrolling
+https://youtu.be/6HFpw5fcaD8
+
+-->
+
+
 <html>
 
 <head>
@@ -15,7 +24,61 @@
 
     body {
       background: #000;
-      
+      min-height:200vh;
+    }
+
+    header{
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      transition: 0.6s;
+      padding: 40px 100px;
+      z-index: 10000;
+    }
+
+    header .logo {
+      position: relative;
+      font-weight: 700;
+      color: #fff;
+      text-decoration: none;
+      font-size: 2em;
+      text-transform: uppercase;
+      letter-spacing: 2px;
+      transition: 0.6s;
+    }
+
+    header ul {
+      position: relative;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    header ul li {
+      position: relative;
+      list-style: none;
+    }
+
+    header ul li a {
+      position: relative;
+      margin: 0 15px;
+      text-decoration: none;
+      color: #fff;
+      letter-spacing: 2px;
+      font-weight: 500px;
+      transition: 0.6s;  
+    }
+
+    .banner {
+      position: relative;
+      width: 100%;
+      height: 100%;
+      background: url(bg.jpg)
+      background-size: cover;
     }
 
 
@@ -26,19 +89,20 @@
 </head>
 
 <body>
-<header>
-  <a href="#" class="logo">Logo</a>
+  <header>
+    <a href="#" class="logo">Logo</a>
 
-  <ul>
-    <li><a href="#">Home</a></li>
-    <li><a href="#">About</a></li>
-    <li><a href="#">Services</a></li>
-    <li><a href="#">Portfolio</a></li>
-    <li><a href="#">Team</a></li>
-    <li><a href="#">Contact</a></li>
-  </ul>
-</header>
+    <ul>
+      <li><a href="#">Home</a></li>
+      <li><a href="#">About</a></li>
+      <li><a href="#">Services</a></li>
+      <li><a href="#">Portfolio</a></li>
+      <li><a href="#">Team</a></li>
+      <li><a href="#">Contact</a></li>
+    </ul>
+  </header>
 
+  <section class="banner"></section>
 
 </body>
 
