--- a/Sticky Navbar on Scroll.html
+++ b/Sticky Navbar on Scroll.html
@@ -40,6 +40,12 @@ https://youtu.be/6HFpw5fcaD8
       z-index: 10000;
     }
 
+    header.sticky {
+      padding: 5px 100px;
+      background: #fff;
+    }
+
+
     header .logo {
       position: relative;
       font-weight: 700;
@@ -76,11 +82,15 @@ https://youtu.be/6HFpw5fcaD8
     .banner {
       position: relative;
       width: 100%;
-      height: 100%;
-      background: url(bg.jpg)
+      height: 10vh;
+      background: url(https://images.unsplash.com/photo-1558981852-426c6c22a060?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1051&q=80)
       background-size: cover;
     }
 
+    header.sticky .logo,
+    header.sticky ul li a {
+      color: #000;
+    }
 
 
 
@@ -103,6 +113,13 @@ https://youtu.be/6HFpw5fcaD8
   </header>
 
   <section class="banner"></section>
+  
+  <script type="text/javascript">
+    window.addEventListener("scroll", function(){
+      var header = document.querySelector("header");
+      header.classList.toggle("sticky", window.scrollY > 0);
+    })
+  </script>
 
 </body>
 
