Update Sticky Navbar on Scroll.html
I code sometime on my phone so, I write the entire code in one file which, I know, is not recommended.
<link rel="stylesheet" href="style.css"> should be in the head section.

--- a/Sticky Navbar on Scroll.html
+++ b/Sticky Navbar on Scroll.html
@@ -6,6 +6,9 @@ Online Video Ustaad
 Sticky Navbar on scrolling
 https://youtu.be/6HFpw5fcaD8
 
+I code sometime on my phone so, I write the entire code in one file which, I know, is not recommended.
+<link rel="stylesheet" href="style.css">
+
 -->
 
 
